--- a/sass/drupal/_custom.scss
+++ b/sass/drupal/_custom.scss
@@ -112,7 +112,7 @@ div#sliding-popup .eu-cookie-withdraw-banner,
   
     &.toolbar-tray-open.header-sticky {
       header.navbar {
-        top: 4.938rem;
+        top: 4.938rem !important;
       }
     }
 
